# doc-gen

./: .gitignore  .gitpod.yml  ci.sh  color_scheme.js  deploy_docs.sh  detect_color_scheme.js  export_json.lean  find.html  frame3.html  gen_docs  import_name.py  index.html  leanpkg.toml  make_nav.py  mathlib_data_structures.py  mistletoe_renderer.py  multiselect.css  multiselect.min.js  nav.js  print_docs.py  pygments-dark.css  pygments.css  readme.md  redirect.js  requirements.txt  search.js  searchWorker.js  setup.cfg  style.css  style_js.css  style_js_frame.css  theme_toggler.js
.github/workflows/: build-pr.yml  build.yml
lean_doc_gen/: __init__.py  __main__.py  mistletoe_renderer.py
lean_doc_gen/templates/: attributes.j2  commands.j2  decl_header.j2  index.j2  navbar.j2  notes.j2  pure_md.j2  references.j2  tactic_doc.j2  tactics.j2
src/: entrypoint.lean  export_json.lean  lean_commit.lean
templates/: 404.j2  attributes.j2  base.j2  commands.j2  decl.j2  decl_header.j2  find.j2  foundational_types.j2  hole_commands.j2  imports.j2  index.j2  module.j2  navbar.j2  notes.j2  opensearch.xml  opensearch.xml.j2  references.j2  tactic_doc.j2  tactics.j2
test/: instances.lean  latex.md  test_latex.py  test_python.py
