[metadata]
name = lean_doc_gen
version = 0.0.1
author = Mathlib Community
description = A documentation builder for lean code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/leanprover-community/doc-gen
project_urls =
    Bug Tracker = https://github.com/leanprover-community/doc-gen/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    =.
packages = lean_doc_gen
python_requires = >=3.8
install_requires =
    mistletoe>=0.7.2
    toml
    mathlibtools
    pygments >= 2.7.1
    jinja2
    networkx
    pybtex>=0.22.2
    latexcodec>=2.0.0
    PyYAML>=5.3.1
    six>=1.15.0
    pylatexenc>=2.4

[options.package_data]
lean_doc_gen =
    templates/*.j2
